test/pass/exceptions/catch_generic_exception.lly
class Ex[A](message: string, v: A) < Exception(message)
{
    var @value = v
}

try: {
    raise Ex::new("", 100)
except Ex[integer] as e:
    if e.value != 100:
        stderr.write("Failed.\n")
}

try: {
    raise Ex::new("", [1, 2, 3])
except Ex[list[integer]] as e:
    if e.value != [1, 2, 3]:
        stderr.write("Failed.\n")
}
