test/fail/exceptions/custom_exception.lly
#[
MyException: Correct!
Traceback:
    from custom_exception.lly:11: in __main__
]#

class MyException(msg: string) < Exception(msg) {

}

raise MyException::new("Correct!\n")
